--- a/produtos.html
+++ b/produtos.html
@@ -41,7 +41,8 @@
       <div id="contentSection" style="display: none;">
         <div class="login-container">
             <div class="login">
-                <h2 class="logintitle">Bem-Vindo <span id="loggedInUsername"></span></h2>
+                <h2 class="logintitle2">Bem-Vindo <span id="loggedInUsername"></span></h2>
+                <input type="button"  id="logoutButton" value="Sair"> <!-- Botão de Sair -->
                 <div id="error" style="color: red;"></div>
             </div>
         </div>
@@ -140,11 +141,22 @@
   <script src="login.js"></script>
 
 </body>
+<script>
+  
+
+  
+</script>
+<script>
+ 
+</script>
 <footer>
   <div class="copyright">
     <p>&copy; Todos os direitos reservados para TaiTai</p> <!-- Texto de direitos autorais -->
   </div>
 </footer>
 <script src="teste.js"></script>
+
+
+  
 
 </html>
