--- a/produtos.html
+++ b/produtos.html
@@ -12,8 +12,9 @@
     <img src="taitai.png" title="Pet Match" height="200" width="200" class="logo">
     <nav>
       <ul>
-        <li><a href="index.html">Encomendas</a></li> <!-- Link para a página inicial -->
-        <li><a href="produtos.html">Catálogo</a></li> <!-- Link para a página de produtos -->
+          <li><a href="index.html">Encomendas</a></li> <!-- Link para a página inicial -->
+          <li><a href="produtos.html">Catálogo</a></li> <!-- Link para a página de produtos -->
+          
 
       </ul>
     </nav>
@@ -70,7 +71,7 @@
 
 <body>
   <div>
-    <p class="titulo"><b>Catálgo</b></p>
+    <p class="titulo"><b>Catálogo</b></p>
     <hr>
   </div>
 
